build(m11): package headless API on Linux